# eos

./: .clang-format  .gitignore  .gitlint  .gitpod.yml  .mailmap  .pre-commit-config.yaml  .pymarkdown.yaml  .travis.yml  CITATION.cff  CODE_OF_CONDUCT.md  Changelog.md  Makefile.am  README.md  autogen.bash  changelog  configure.ac  terminal_log_errors.txt
eos/: Makefile.am  config.cc  config.hh  constraint.cc  constraint.hh  constraint_TEST.cc  decays.hh  detector-level-pdf.cc  detector-level-pdf.hh  detector-level-pdf_TEST.cc  eos.py.in  eos_py_interface_TEST.py  init.cc  observable-fwd.hh  observable-impl.hh  observable.cc  observable.hh  observable_TEST.cc  reference.cc  reference.hh  reference_TEST.cc  references.json.in  references.txt  references.yaml  references_TEST.in  report-template.tex  signal-pdf-fwd.hh  signal-pdf-impl.hh  signal-pdf.cc  signal-pdf.hh  signal-pdf_TEST.cc  terminal_log.txt  terminal_log_errors.txt
eos/b-decays/: Makefile.am  b-to-3l-nu.cc  b-to-3l-nu.hh  b-to-3l-nu_TEST.cc  b-to-d-l-nu.cc  b-to-d-l-nu.hh  b-to-d-l-nu_TEST.cc  b-to-d-l-x-nu.cc  b-to-d-l-x-nu.hh  b-to-d-pi-l-nu.cc  b-to-d-pi-l-nu.hh  b-to-d-pi-l-nu_TEST.cc  b-to-dstar-l-nu.cc  b-to-dstar-l-nu.hh  b-to-dstar-l-nu_TEST.cc  b-to-eta-l-nu_TEST.cc  b-to-gamma-l-nu.cc  b-to-gamma-l-nu.hh  b-to-gamma-l-nu_TEST.cc  b-to-k-nu-nu_TEST.cc  b-to-kstar-nu-nu_TEST.cc  b-to-l-nu.cc  b-to-l-nu.hh  b-to-l-nu_TEST.cc  b-to-pi-l-nu.cc  b-to-pi-l-nu.hh  b-to-pi-l-nu_TEST.cc  b-to-pi-l-x-nu.cc  b-to-pi-l-x-nu.hh  b-to-pi-pi-l-nu.cc  b-to-pi-pi-l-nu.hh  b-to-pi-pi-l-nu_TEST.cc  b-to-pi-pi-pw-l-nu_TEST.cc  b-to-psd-l-nu.cc  b-to-psd-l-nu.hh  b-to-psd-nu-nu.cc  b-to-psd-nu-nu.hh  b-to-psd-psd-l-nu-impl.hh  b-to-psd-psd-l-nu.cc  b-to-psd-psd-l-nu.hh  (+46 more)
eos/c-decays/: Makefile.am  c-to-psd-l-nu.cc  c-to-psd-l-nu.hh  d-to-k-l-nu_TEST.cc  d-to-psd-l-nu.cc  d-to-psd-l-nu.hh  dq-to-l-nu.cc  dq-to-l-nu.hh  dq-to-l-nu_TEST.cc  dstarq-to-l-nu.cc  dstarq-to-l-nu.hh  lambdac-to-lambda-l-nu.cc  lambdac-to-lambda-l-nu.hh  lambdac-to-lambda-l-nu_TEST.cc  lambdac-to-onehalfplus-l-nu.cc  lambdac-to-onehalfplus-l-nu.hh  observables.cc  observables.hh
eos/constraints/: B-to-D-l-nu.yaml  B-to-D-pi-l-nu.yaml  B-to-K-charmonium.yaml  B-to-K-ll.yaml  B-to-Kstar-charmonium.yaml  B-to-Kstar-gamma.yaml  B-to-Kstar-ll.yaml  B-to-P-P-form-factors.yaml  B-to-P-form-factors.yaml  B-to-V-form-factors.yaml  B-to-Xs-gamma.yaml  B-to-Xs-ll.yaml  B-to-eta-l-nu.yaml  B-to-omega-l-nu.yaml  B-to-pi-l-nu.yaml  B-to-pi-pi-l-nu.yaml  B-to-psd-psd.yaml  B-to-rho-l-nu.yaml  Bc-to-V-form-factors.yaml  Bq-to-Dq-P.yaml  Bq-to-dilepton.yaml  Bq-to-ll.yaml  Bs-to-Ds-gamma-l-nu.yaml  Bs-to-Ds-l-nu.yaml  Bs-to-phi-charmonium.yaml  Bs-to-phi-ll.yaml  D-to-K-l-nu.yaml  D-to-P-form-factors.yaml  D-to-eta-l-nu.yaml  Ds-to-eta-l-nu.yaml  K-to-l-nu.yaml  K-to-pi-l-nu.yaml  Lb-to-L-ll.yaml  Lb-to-Lq-form-factors.yaml  Lc-to-L-l-nu.yaml  Makefile.am  dispersive-bounds.yaml  ee-to-ccbar.yaml  ee-to-pipi.yaml  epi-to-epi.yaml  (+5 more)
eos/d-decays/: Makefile.am  d-to-psd-l-nu.cc  d-to-psd-l-nu.hh
eos/form-factors/: Makefile.am  analytic-b-to-d-lcsr.cc  analytic-b-to-dstar-lcsr.cc  analytic-b-to-gamma-qcdf.cc  analytic-b-to-gamma-qcdf.hh  analytic-b-to-gamma-qcdf_TEST.cc  analytic-b-to-k-lcsr.cc  analytic-b-to-kstar-lcsr.cc  analytic-b-to-kstar.cc  analytic-b-to-kstar.hh  analytic-b-to-kstar_TEST.cc  analytic-b-to-p-lcsr-impl.hh  analytic-b-to-p-lcsr.cc  analytic-b-to-p-lcsr.hh  analytic-b-to-p-lcsr_TEST.cc  analytic-b-to-pi-dkmmo2008.cc  analytic-b-to-pi-lcsr.cc  analytic-b-to-pi-pi.cc  analytic-b-to-pi-pi.hh  analytic-b-to-pi-pi_TEST.cc  analytic-b-to-pi.cc  analytic-b-to-pi.hh  analytic-b-to-pi_TEST.cc  analytic-b-to-psd-dkmmo2008-impl.hh  analytic-b-to-psd-dkmmo2008.hh  analytic-b-to-rho-lcsr.cc  analytic-b-to-v-lcsr-impl.hh  analytic-b-to-v-lcsr.cc  analytic-b-to-v-lcsr.hh  analytic-b-to-v-lcsr_TEST.cc  analytic-bs-to-ds-lcsr.cc  analytic-bs-to-dsstar-lcsr.cc  analytic-bs-to-k-dkmmo2008.cc  analytic-bs-to-k-lcsr.cc  analytic-bs-to-k_TEST.cc  analytic-bs-to-kstar-lcsr.cc  analytic-bs-to-phi-lcsr.cc  analytic-c-to-pi.cc  analytic-d-to-pi.cc  analytic-d-to-pi.hh  (+160 more)
eos/maths/: Makefile.am  angular-integrals.cc  angular-integrals.hh  angular-integrals_TEST.cc  complex.hh  derivative.cc  derivative.hh  derivative_TEST.cc  dft-container-impl.hh  dft-container.cc  dft-container.hh  dft-container_TEST.cc  dft-plan-impl.hh  dft-plan.cc  dft-plan.hh  dft-plan_TEST.cc  gegenbauer-polynomial.cc  gegenbauer-polynomial.hh  gegenbauer-polynomial_TEST.cc  gsl-interface.hh  gsl-interface_TEST.cc  integrate-cubature.cc  integrate-impl.hh  integrate.cc  integrate.hh  integrate_TEST.cc  interpolation.cc  interpolation.hh  interpolation_TEST.cc  lagrange-polynomial.hh  lagrange-polynomial_TEST.cc  legendre-polynomial-vector.hh  legendre-polynomial-vector_TEST.cc  matrix.hh  matrix_TEST.cc  multiplepolylog-li22-const.cc  multiplepolylog-li22-const.hh  multiplepolylog-li22.cc  multiplepolylog-li22.hh  multiplepolylog_TEST.cc  (+17 more)
eos/meson-mixing/: Makefile.am  bq-mixing.cc  bq-mixing.hh  bq-mixing_TEST.cc  observables.cc  observables.hh
eos/models/: Makefile.am  ckm.cc  ckm.hh  ckm_TEST.cc  model.cc  model.hh  standard-model.cc  standard-model.hh  standard-model_TEST.cc  top-loops.cc  top-loops.hh  top-loops_TEST.cc  wet.cc  wet.hh  wet_TEST.cc  wilson-coefficients.cc  wilson-coefficients.hh  wilson-coefficients_TEST.cc
eos/nonleptonic-amplitudes/: Makefile.am  nonleptonic-amplitudes-adapter.hh  nonleptonic-amplitudes-fwd.hh  nonleptonic-amplitudes.cc  nonleptonic-amplitudes.hh  observables.cc  observables.hh  qcdf-amplitudes.cc  qcdf-amplitudes.hh  qcdf-amplitudes_TEST.cc  qcdf_coefs.cc  qcdf_coefs.hh  su3f-amplitudes.cc  su3f-amplitudes.hh  su3f-amplitudes_TEST.cc  topological-amplitudes.cc  (+2 more)
python/: .gitignore  Makefile.am  _eos.cc  eos.cc  eos.py  eos_TEST.py  eosdata.py  setup.py.in
src/: Makefile.am  constraint.cc  constraint.hh  constraint_TEST.cc  factory.cc  factory.hh  observable.cc  observable.hh  references.txt
test/: Makefile.am  test.cc  test.hh  test_TEST.cc
(+1244 files in other folders)
